--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -1,13 +1,13 @@
 .button {
-  width: 60px;
+  width: 80px;
   height: 35px;
   padding: 1%;
   border-radius: 20% 20% 20% 20%;
+  margin-top: 20px;
 }
 
 .button--confirmation {
   position: relative;
-  float: right;
 }
 
 .button--flash {
