--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -1,16 +1,23 @@
+@import '../../styles-global/base-color';
+
 .input {
-  width: 200px;
-  height: 38px;
+  width: 300px;
+  height: 40px;
   margin-bottom: 10px;
   text-align: center;
   transition: 0.5s;
   border: 1px solid black;
   border-radius: 5px;
-  background-color: rgb(221, 221, 221);
+  background-color: $color-antiqueWhite;
   font-size: 1.5em;
 }
 
 .input:focus {
   box-shadow: -4px 4px 8px 0 black;
-  background-color: brown;
+  background-color: $color-sangria;
+}
+
+.input:hover {
+  box-shadow: -4px 4px 8px 0 black;
+  background-color: $color-sangria;
 }
