--- a/src/styles-global/_base-color.scss
+++ b/src/styles-global/_base-color.scss
@@ -1,4 +1,4 @@
-$color-brightGray: #36374c;
+$color-background: #36374c;
 $color-silverSand:#b9c1c1;
 $color-antiqueWhite: #faebd7;
 $color-roman: #db676a;
