--- a/src/pages/Creation/components/CardStack.scss
+++ b/src/pages/Creation/components/CardStack.scss
@@ -1,8 +1,16 @@
 @import '../../../styles-global/base-color';
 
+.card-stack {
+  position: relative;
+  display: flex;
+  width: 100%;
+  height: 80%;
+  align-items: center;
+  justify-content: space-around;
+}
+
 .card {
   position: absolute;
-  left: 20%;
   display: flex;
   flex-wrap: wrap;
   background: white;
@@ -12,6 +20,11 @@
   height: 500px;
   border-radius: 10px;
   transition: 1s;
+
+  &__form {
+    flex-direction: column;
+    background-color: $color-background;
+  }
 }
 
 .fadeaway {
