--- a/src/styles-global/_utils.scss
+++ b/src/styles-global/_utils.scss
@@ -4,3 +4,9 @@
   align-items: center;
   justify-content: center;
 }
+
+@mixin centralize() {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
