--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -5,7 +5,7 @@
   height: 35px;
   padding: 1%;
   border-radius: 10px;
-  margin-top: 20px;
+  margin: 20px;
 }
 
 .button--flash {
@@ -27,10 +27,11 @@
   width: 20%;
   height: 100%;
   background: $color-silverSand;
+  opacity: 0.6;
   transform: skewX(-30deg);
   transition: 0.5s;
 }
 
 .button--flash:hover::after {
-  left: 125%;
+  left: 110%;
 }
