--- a/src/pages/GamePage/GamePage.scss
+++ b/src/pages/GamePage/GamePage.scss
@@ -1,13 +1,39 @@
 @import '../../styles-global/base-color';
 @import '../../styles-global/utils';
 
+@keyframes show {
+  0% {
+    transform: scale(0.3);
+    opacity: 0;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes darkenBG {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0.65;
+  }
+}
+
 .game {
   height: 100vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
+  transition: 1s;
 
   &__modal {
+    @include centralize-column;
+
+    box-sizing: border-box;
     position: absolute;
     z-index: 1;
     height: 300px;
@@ -17,11 +43,37 @@
     left: calc(50% - 150px);
     border-radius: 10px;
     transition: 1s;
-    opacity: 1;
+    opacity: 0;
+    animation: show 1s both;
 
-    &__show {
-      opacity: 1;
+    &__dice-figure {
+      max-height: 200px;
     }
+
+    &__results {
+      margin-top: 15px;
+      align-content: center;
+    }
+
+    &__results--crit {
+      font-size: 1.5em;
+      color: rgb(46, 226, 46);
+    }
+
+    &__results--fail {
+      font-size: 1.5em;
+      color: $color-sangria;
+    }
+  }
+
+  &__blur {
+    z-index: 0;
+    position: absolute;
+    background-color: black;
+    opacity: 0.6;
+    height: 100vh;
+    width: 100vw;
+    animation: darkenBG 1s both;
   }
 
   &__body {
