--- a/src/pages/GamePage/GamePage.scss
+++ b/src/pages/GamePage/GamePage.scss
@@ -88,6 +88,8 @@
     width: 750px;
     height: 100%;
     border: solid black;
+    border-radius: 18px;
+    overflow: hidden;
   }
 
   &__info {
